--- a/experiments/V_F14_RePINN_E5/config.yaml
+++ b/experiments/V_F14_RePINN_E5/config.yaml
@@ -7,13 +7,13 @@ DEFAULT_EXP_PARAMS:
   architecture_name: Seq2Context
   band: null
   batch_size: 16
-  epochs: 50
+  epochs: 100
   evaluate_by_slice: true
   feature_kind: Normal
   horizon: 30
   lag_window: 30
   patience: 50
-  plot: true
+  plot: false
   scenario: P50
   show_components: false
   slice_ratios: !!python/tuple
@@ -21,4 +21,4 @@ DEFAULT_EXP_PARAMS:
   test_size: 0.6
   use_known_good: false
 datasets_to_run: VOLVE
-num_ensemble_models: 1
+num_ensemble_models: 5
